# juce-ui-lag-inspector

./: .gitignore  CMakeLists.txt  README.md  UILagInspector.jucer
.github/workflows/: main.yml
Source/: Graph.cpp  Graph.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/: Graph.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
